# agentic_pdf_rag

./: README.md  pyproject.toml
src/agentic_pdf_rag/config/: tasks.yaml
src/agentic_pdf_rag/tools/: crew.py  main.py
