[project]
name = "agentic_pdf_rag"
version = "0.1.0"
description = "agentic_pdf_rag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
agentic_pdf_rag = "agentic_pdf_rag.main:run"
run_crew = "agentic_pdf_rag.main:run"
train = "agentic_pdf_rag.main:train"
replay = "agentic_pdf_rag.main:replay"
test = "agentic_pdf_rag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
